objects/pse__Miscellaneous_Adjustment__c.object
<CustomObject>
    <customHelpPage>pse__MiscellaneousAdjustmentHelp</customHelpPage>
    <description>Use miscellaneous adjustments to correct errors in data entry or adjust transactions. When you create a miscellaneous adjustment, FinancialForce PSA creates a number of related transactions of a specific category (for example, Pass-Through Ready-to-Bill Revenue) and amount. A miscellaneous adjustment is applied to a project and its related roll-ups to region, practice, and group. Miscellaneous adjustments roll up to actuals fields depending on settings you control in the Actuals configuration group.</description>
    <fields>
        <fullName>pse__Admin_Global_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows Admin to make &apos;global&apos; changes to the Misc Adj., including edits to the Misc Adj.&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</description>
        <inlineHelpText>If checked, allows Admin to make &apos;global&apos; changes to the Misc Adj., including edits to the Misc Adj.&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</inlineHelpText>
        <label>Admin Global Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The monetary amount of the Miscellaneous Adjustment. Defaults to and must always be same currency as Project.</description>
        <inlineHelpText>The monetary amount of the Miscellaneous Adjustment. Defaults to and must always be same currency as Project.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked when the Miscellaneous Adjustment is approved - typically by a workflow driven by the Status field.</description>
        <inlineHelpText>This checkbox should be checked when the Miscellaneous Adjustment is approved - typically based on the Status field.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved_for_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved_for_Vendor_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Vendor Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Miscellaneous_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Audit_Notes__c</fullName>
        <label>Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Date__c</fullName>
        <label>Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Miscellaneous Adjustment (Bill Transaction)</relationshipLabel>
        <relationshipName>Bill_Tx_Miscellaneous_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Invoiced__c</fullName>
        <description>Reflects Invoiced flag value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),$Label.pse__common_label_n_a,IF(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Invoiced__c,$Label.pse__common_label_yes,$Label.pse__common_label_no))</formula>
        <label>Billing Event Invoiced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Event Item</label>
        <referenceTo>pse__Billing_Event_Item__c</referenceTo>
        <relationshipLabel>Miscellaneous Adjustments</relationshipLabel>
        <relationshipName>Miscellaneous_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Released__c</fullName>
        <description>Reflects Released flag value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),$Label.pse__common_label_n_a,IF(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Is_Released__c,$Label.pse__common_label_yes,$Label.pse__common_label_no))</formula>
        <label>Billing Event Released</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Status__c</fullName>
        <description>Status pick list value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),&apos;&apos;,TEXT(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Status__c))</formula>
        <label>Billing Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event__c</fullName>
        <description>Formula hyperlink to the Billing Event (parent record to the Bill Event Item) if any.</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),&apos;&apos;,HYPERLINK(&apos;/&apos;&amp;pse__Billing_Event_Item__r.pse__Billing_Event__c, IF(OR(ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name)),pse__Billing_Event_Item__r.pse__Billing_Event__c,(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name))))</formula>
        <label>Billing Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this item cannot be billed</description>
        <label>Billing Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Eligible_for_Billing__c</fullName>
        <description>Indicates Misc Adjustment is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag or having an eligible Transaction Category, which may also be required per global config).

This means all of the following conditions must be met:
Billing Hold = false
Exclude from Billing = false
Include In Financials = true
Billed = false
Invoiced = false
Billing Event Item = {blank}
Project = {not blank}
Project&apos;s Account = {not blank}
Project Exclude From Billing = false</description>
        <formula>IF(AND(NOT(pse__Billing_Hold__c),NOT(pse__Exclude_from_Billing__c),pse__Include_In_Financials__c,NOT(pse__Billed__c),NOT(pse__Invoiced__c),OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c)),NOT(OR(ISNULL(pse__Project__c),ISBLANK(pse__Project__c))),NOT(OR(ISNULL(pse__Project__r.pse__Account__c),ISBLANK(pse__Project__r.pse__Account__c))),NOT(pse__Project__r.pse__Exclude_From_Billing__c)),$Label.pse__common_label_yes,$Label.pse__common_label_no)</formula>
        <inlineHelpText>Indicates Misc Adjustment is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag or having an eligible Transaction Category, which may also be required per global config).</inlineHelpText>
        <label>Eligible for Billing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, never bill this business record.  Same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</description>
        <inlineHelpText>If checked, never bill this business record.  Same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</inlineHelpText>
        <label>Exclude from Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Include_In_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Miscellaneous Adjustment (Invoice Transaction)</relationshipLabel>
        <relationshipName>Invoice_Tx_Miscellaneous_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Group_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Project_Group__r.CurrencyIsoCode)</formula>
        <label>Override Project Group Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field is set, it overrides the Group to which a Misc Adjustment&apos;s Transactions will roll up for Group Actuals, even if its Project is in a different Group.  Typically a Misc Adjustment&apos;s Transactions roll up to its Project&apos;s Group.  Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>If this field is set, it overrides the Group to which a Misc Adjustment&apos;s Transactions will roll up for Group Actuals, even if its Project is in a different Group.  Typically a Misc Adjustment&apos;s Transactions roll up to its Project&apos;s Group.</inlineHelpText>
        <label>Override Project Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Group For Miscellaneous Adjustments</relationshipLabel>
        <relationshipName>Override_Group_For_Misc_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Practice_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Project_Practice__r.CurrencyIsoCode)</formula>
        <label>Override Project Practice Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field is set, it overrides the Practice to which a Misc Adjustment&apos;s Transactions will roll up for Practice Actuals, even if its Project is in a different Practice.  Typically a Misc Adjustment&apos;s Transactions roll up to its Project&apos;s Practice.  Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>If this field is set, it overrides the Practice to which a Misc Adjustment&apos;s Transactions will roll up for Practice Actuals, even if its Project is in a different Practice.  Typically a Misc Adjustment&apos;s Transactions roll up to its Project&apos;s Practice.</inlineHelpText>
        <label>Override Project Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Practice For Miscellaneous Adjustments</relationshipLabel>
        <relationshipName>Override_Practice_For_Misc_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Region_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Project_Region__r.CurrencyIsoCode)</formula>
        <label>Override Project Region Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field is set, it overrides the Region to which a Misc Adjustment&apos;s Transactions will roll up for Regional Actuals, even if its Project is in a different Region.  Typically a Misc Adjustment&apos;s Transactions roll up to its Project&apos;s Region.  Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>If this field is set, it overrides the Region to which a Misc Adjustment&apos;s Transactions will roll up for Regional Actuals, even if its Project is in a different Region.  Typically a Misc Adjustment&apos;s Transactions roll up to its Project&apos;s Region.</inlineHelpText>
        <label>Override Project Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Region For Miscellaneous Adjustments</relationshipLabel>
        <relationshipName>Override_Region_For_Misc_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Miscellaneous Adjustments</relationshipLabel>
        <relationshipName>Miscellaneous_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Recognition_Method__c</fullName>
        <description>The recognition method to apply to this record for revenue forecasting.</description>
        <inlineHelpText>The recognition method to apply to this record for revenue forecasting.</inlineHelpText>
        <label>Recognition Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>pse__Recognition_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Transaction_Category__c</fullName>
        <label>Transaction Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booked Revenue</fullName>
                </value>
                <value>
                    <fullName>Budgeted Cost</fullName>
                </value>
                <value>
                    <fullName>Budgeted Expense Cost</fullName>
                </value>
                <value>
                    <fullName>Expense Budget</fullName>
                </value>
                <value>
                    <fullName>Expense Cost</fullName>
                </value>
                <value>
                    <fullName>External Cost</fullName>
                </value>
                <value>
                    <fullName>Internal Budget</fullName>
                </value>
                <value>
                    <fullName>Internal Cost</fullName>
                </value>
                <value>
                    <fullName>Other Cost</fullName>
                </value>
                <value>
                    <fullName>Pass-Through Ready-to-Bill Revenue</fullName>
                </value>
                <value>
                    <fullName>Pre-Billed Revenue</fullName>
                </value>
                <value>
                    <fullName>Ready-to-Bill Revenue</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Miscellaneous Adjustment</relationshipLabel>
        <relationshipName>Miscellaneous_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Miscellaneous Adjustments</relationshipLabel>
        <relationshipName>Miscellaneous_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Invoice_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoice Item</label>
        <referenceTo>pse__Vendor_Invoice_Item__c</referenceTo>
        <relationshipLabel>Miscellaneous Adjustments</relationshipLabel>
        <relationshipName>Miscellaneous_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Miscellaneous Adjustment</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Effective_Date__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Transaction_Category__c</columns>
        <columns>pse__Amount__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Transaction__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Miscellaneous Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Miscellaneous Adjustments</pluralLabel>
    <recordTypes>
        <fullName>TR_PS_Enterprise_Miscellaneous_Adjustment</fullName>
        <active>true</active>
        <label>TR PS Enterprise Miscellaneous Adjustment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Approver_Share__c</fullName>
        <label>PSE Approver Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Invoiced</fullName>
        <active>true</active>
        <description>Invoice Number or Date is not allowed on record unless it is invoiced</description>
        <errorConditionFormula>(pse__Invoice_Number__c != null ||
pse__Invoice_Date__c != null) &amp;&amp; pse__Invoiced__c = false</errorConditionFormula>
        <errorMessage>Invoice Number or Date is not allowed on record unless it is invoiced</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Misc_Adj_Billing_Requires_Inclusion</fullName>
        <active>true</active>
        <description>For a Miscellaneous Adjustment to be marked as Billed, it must also be marked as Included In Financials and Approved.</description>
        <errorConditionFormula>AND(pse__Billed__c,OR(NOT(pse__Include_In_Financials__c),NOT(pse__Approved__c)))</errorConditionFormula>
        <errorDisplayField>pse__Billed__c</errorDisplayField>
        <errorMessage>For a Miscellaneous Adjustment to be marked as Billed, it must also be marked as Included In Financials and Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Misc_Adj_Invoicing_Requires_Billing</fullName>
        <active>true</active>
        <description>For a Miscellaneous Adjustment to be marked as Invoiced, it must also be marked as Billed.</description>
        <errorConditionFormula>AND(pse__Invoiced__c,NOT(pse__Billed__c))</errorConditionFormula>
        <errorDisplayField>pse__Invoiced__c</errorDisplayField>
        <errorMessage>For a Miscellaneous Adjustment to be marked as Invoiced, it must also be marked as Billed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Misc_Adj_Project_is_Constant</fullName>
        <active>true</active>
        <description>A Miscellaneous Adjustment&apos;s Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</description>
        <errorConditionFormula>OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;),AND(ISCHANGED(pse__Project__c),OR(NOT(pse__Admin_Global_Edit__c),ISNULL(pse__Audit_Notes__c),ISBLANK(TRIM(pse__Audit_Notes__c)))))</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>A Miscellaneous Adjustment&apos;s Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Vendor_Invoice_Constant</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(pse__Vendor_Invoice_Item__c),LEN(PRIORVALUE(pse__Vendor_Invoice_Item__c))&gt;0)</errorConditionFormula>
        <errorDisplayField>pse__Vendor_Invoice_Item__c</errorDisplayField>
        <errorMessage>Vendor Invoice Item cannot be changed</errorMessage>
    </validationRules>
</CustomObject>